color customisation with 5 themes users able to choose across 5 different color themes, which is saved to backend such that it is the same everytime they relogin, profile updates upon signout

--- a/Orbital/frontend/src/Course/coursePage.module.css
+++ b/Orbital/frontend/src/Course/coursePage.module.css
@@ -173,7 +173,7 @@
 /*applies to all trashcan icon*/
 .trashcan {
     padding: 10px 10px;
-    color: rgba(0, 0, 0, 0.5);
+    color: grey;
 } /*trashcan icon*/
 
 .trashcan:hover {
