--- a/Orbital/frontend/src/Login/dashboardPage.module.css
+++ b/Orbital/frontend/src/Login/dashboardPage.module.css
@@ -3,6 +3,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Calibri:wght@300&display=swap");
 
+@import "../Profile/colorPicker.module.css";
+
 * {
     margin: 0;
     padding: 0;
