--- a/Orbital/frontend/src/Profile/profilePage.module.css
+++ b/Orbital/frontend/src/Profile/profilePage.module.css
@@ -40,9 +40,63 @@
 .formContainer {
     display: flex;
     position: fixed;
-    top: 20vh;
+    top: 15vh;
     left: 7vw;
+    width: 50vw;
+    margin: 2vh 0 2vh 0;
 }
+
+.formGroup {
+    width: 100%;
+    display: flex;
+} /*input box and label*/
+
+.formGroup label {
+    font-size: 16px;
+    color: var(--mainText-color);
+    text-align: left;
+    font-weight: bold;
+} /*input box label*/
+
+.formGroup input {
+    width: 100%;
+    height: 100%;
+    background: white;
+    outline: none;
+    border: 1.5px solid var(--border-color);
+    border-radius: 10px;
+    font-size: 16px;
+    color: var(--mainText-color);
+    padding: 8.5px;
+} /*input box content*/
+
+.formGroup input::placeholder {
+    color: rgba(0, 0, 0, 0.6);
+} /*input box placeholder*/
+
+.formGroup input:focus {
+    outline: none;
+    border-color: var(--focus-color);
+    box-shadow: 0 0 5px var(--border-color);
+} /*input box on focus*/
+
+.formContainer button {
+    padding: 10px 30px;
+    margin: 10px;
+    text-decoration: none;
+    letter-spacing: 1px;
+    font-size: 16px;
+    border: 2px solid var(--border-color);
+    border-radius: 30px;
+    color: var(--mainText-color);
+    cursor: pointer;
+    font-weight: bold;
+    background: transparent;
+} /*submission buttons for course popup*/
+
+.formContainer button:hover {
+    background: var(--hover-color);
+} /*submission buttons on hover for course popup*/
 
 .linkGroup {
     display: flex;
@@ -55,6 +109,7 @@
     border: 2px solid var(--border-color);
     border-radius: 30px;
     padding: 10px 30px;
+    margin: 10px;
     color: var(--mainText-color);
     text-decoration: none;
     font-weight: bold;
@@ -71,17 +126,58 @@
 .colorContainer {
     display: flex;
     position: fixed;
+    top: 30vh;
+    left: 7vw;
+    width: 100%;
+    align-items: baseline;
 }
 
-.colorContainer h2 {
-    color: var(--mainText-color);
-}
-
-.colorPicker p {
+.colorContainer p {
     text-align: left;
+    font-size: 16px;
+    font-weight: bold;
     color: var(--mainText-color);
 }
 
-.colorPicker {
+.colorContainer button {
+    border: 2px solid var(--border-color);
+    border-radius: 30px;
+    padding: 10px 30px;
     margin-left: 20px;
+    color: var(--mainText-color);
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 16px;
+    background: transparent;
+}
+
+.colorContainer button:hover {
+    background-color: var(--hover-color);
+    cursor: pointer;
+}
+
+.buttonGroup {
+    display: flex;
+    position: fixed;
+    bottom: 10vh;
+    left: 5vw;
+}
+
+.buttonGroup button {
+    border: 2px solid var(--border-color);
+    border-radius: 30px;
+    padding: 10px 30px;
+    margin-left: 20px;
+    color: var(--mainText-color);
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 16px;
+    background: transparent;
+}
+
+.buttonGroup button:hover {
+    background-color: var(--hover-color);
+    cursor: pointer;
 }
