--- a/Orbital/frontend/src/Landing/landingPage.module.css
+++ b/Orbital/frontend/src/Landing/landingPage.module.css
@@ -585,6 +585,7 @@
     border: 2px solid var(--border-color);
     box-shadow: 0 0 20px var(--border-color);
     color: var(--mainText-color);
+    text-align: left;
 } /*popup box styling*/
 
 .backdropTaskPopup {
