--- a/Orbital/frontend/src/Feedback/feedbackPage.module.css
+++ b/Orbital/frontend/src/Feedback/feedbackPage.module.css
@@ -92,7 +92,7 @@
 
 .feedbackItem textarea {
     width: 100%;
-    height: 100%;
+    height: 200px;
     background: white;
     outline: none;
     border: 1.5px solid var(--border-color);
