Update Daily Quotes
- Added a "not-allowed" cursor when the button is disabled.
- Changed the timeout of generating a new quote from 1000ms to 500ms

--- a/Orbital/frontend/src/Login/dashboardPage.module.css
+++ b/Orbital/frontend/src/Login/dashboardPage.module.css
@@ -128,6 +128,11 @@
     cursor: pointer;
 }
 
+.quoteGroup button.disabled {
+    cursor: not-allowed;
+    background-color: rgba(0, 124, 185, 0.1); /* Optional: Change background color to indicate disabled state */
+}
+
 /*Applies to all dashboard pages*/
 .welcomeMessage {
     position: fixed;
