--- a/Orbital/frontend/src/Settings/settingsPage.module.css
+++ b/Orbital/frontend/src/Settings/settingsPage.module.css
@@ -103,6 +103,38 @@
     cursor: pointer;
 } /*hyperlink on hover*/
 
+.colorContainer {
+    display: flex;
+    position: fixed;
+    width: 100%;
+    align-items: baseline;
+}
+
+.colorContainer p {
+    text-align: left;
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--mainText-color);
+}
+
+.colorContainer button {
+    border: 2px solid var(--border-color);
+    border-radius: 30px;
+    padding: 10px 30px;
+    margin-left: 20px;
+    color: var(--mainText-color);
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 16px;
+    background: transparent;
+}
+
+.colorContainer button:hover {
+    background-color: var(--hover-color);
+    cursor: pointer;
+}
+
 .buttonGroup {
     display: flex;
     position: fixed;
@@ -128,12 +160,27 @@
     cursor: pointer;
 }
 
+.successMessage {
+    display: block;
+    position: fixed;
+    bottom: 10vh;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    /* background-color: var(--success-color); */
+    color: var(--mainText-color);
+    font-size: 16px;
+    text-align: center;
+} 
+
 .spinnerGroup {
     display: block;
+    position: fixed;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    bottom: 10vh;
+    left: 50%;
+    transform: translateX(-50%);
     text-align: center;
     font-size: 12px;
     color: var(--mainText-color);
